# ChangeLog for dev-perl/Inline
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Inline/ChangeLog,v 1.42 2011/09/27 16:31:26 tove Exp $

*Inline-0.480.0 (27 Sep 2011)

  27 Sep 2011; Torsten Veller <tove@gentoo.org> +Inline-0.480.0.ebuild:
  Version bump. Don't run the tests of Inline and Inline::C parallel (#384137)

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Inline-0.470.ebuild:
  Cleanup

*Inline-0.470.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +Inline-0.470.0.ebuild:
  Change version scheme

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Inline-0.45.ebuild,
  -Inline-0.46.ebuild:
  Cleanup

*Inline-0.470 (21 Jan 2011)

  21 Jan 2011; Torsten Veller <tove@gentoo.org> +Inline-0.470.ebuild:
  Version bump

*Inline-0.46 (05 Mar 2010)

  05 Mar 2010; Torsten Veller <tove@gentoo.org> +Inline-0.46.ebuild:
  Version bump

  21 Jan 2010; Torsten Veller <tove@gentoo.org> Inline-0.44-r1.ebuild:
  mips -> ~mips

  18 Dec 2009; Torsten Veller <tove@gentoo.org> Inline-0.45.ebuild:
  Ebuild maintenance (#297133)

*Inline-0.45 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +Inline-0.45.ebuild:
  Version bump.

  01 May 2007; Markus Rothe <corsair@gentoo.org> Inline-0.44-r1.ebuild:
  Stable on ppc64; bug #175120

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Inline-0.44-r1.ebuild:
  Ebuild maintenance

  10 Dec 2006; Yuval Yaari <yuval@gentoo.org> Inline-0.44-r1.ebuild:
  Changed perl-core/Test-Harness to virtual/perl-Test-Harness (bug #157685)

  14 Oct 2006; Markus Rothe <corsair@gentoo.org> Inline-0.44-r1.ebuild:
  Added ~ppc64; bug #150934

  13 Oct 2006; Yuval Yaari <yuval@gentoo.org> Inline-0.44-r1.ebuild:
  using File-Spec's and Digest-MD5's virtuals; bug #151201

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Inline-0.44-r1.ebuild:
  Adding perl dep; fixed DEPEND
