@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX gtk2-patch.diff 907 RMD160 f17445d86f6e5cf3fb86c37e6ecdf3aa31a66992 SHA1 6cf1058e2ef2542b280f951f7f4a44a282fdbfa3 SHA256 ed642975781569afe731dec667d4bc3816a01ab3ed818423a215c1caeb60ae24
 DIST Inline-0.44.tar.gz 91450 RMD160 ed7b0c1a8d63d021501699a1bcb0916a1dbe1a5b SHA1 a6bfcf271325cb8c4bfca497427d67b2b2f795ef SHA256 fa19cd8c2d9ea9eca686dbd18b14996a759387a3f988b52ababa3733e3c40aa6
@@ -7,13 +7,13 @@ DIST Inline-0.47.tar.gz 99687 RMD160 0ce33cf6ee5e7ace5ab8d59f60cdf3e1655f24bf SH
 DIST Inline-0.48.tar.gz 100673 RMD160 fcd0450e38bc49152f0d9d5d3b4d8d82c3ea557a SHA1 837e4340118c7d521f1042b61c4a223c2f655f47 SHA256 bd92982f7b09c644d5007a387f7130a7e1857c21ab25cb766388f47f6e1f23ce
 EBUILD Inline-0.44-r1.ebuild 919 RMD160 6e43d7231eca08093cc12e4795de21c12474b0bb SHA1 f3ab624670e88b060e331cf5114c6b766ddad813 SHA256 10be653817c023fbf606be52482ec10bd4c57f1e4a7029b0b8286eb2c0522cdd
 EBUILD Inline-0.470.0.ebuild 565 RMD160 94b1a631ab14647fc291c45ae6bf7e45b1e47754 SHA1 41f7744e034031df77e3525051ed3e73dd96ee1d SHA256 a33db20e5accc91ab14254eb56e389a0f6115d5fddfc629f8fa63bb6517a9b2c
-EBUILD Inline-0.480.0.ebuild 623 RMD160 de84564b2d9107972538c6ff1528c8c188cda217 SHA1 531dc5f792dc800489df055afc12b03f8c629cfd SHA256 70423baf49749eb4759cccd9c14360b98f57a1d7838a10503dc4aa27704fc790
-MISC ChangeLog 4517 RMD160 404a571756fef8b9748b1efe7c1db7cb7e1da675 SHA1 ec35a4ad59bb4be5d89e04974b7737c0cb5c6474 SHA256 00cc7c026a004636f126ceb41bbcb7b6d4a6b869352fa7a3aa5606ea17d099c0
+EBUILD Inline-0.480.0.ebuild 656 RMD160 247c428374cd0c5893f058903227fb1013cdfe74 SHA1 c749706db66c476a9dc3029b411a91d570afb399 SHA256 580aba9c7bafcde8b9e3ab88a16e33b74fade610270348c92309281dddf37aaf
+MISC ChangeLog 4736 RMD160 189cf26c2c14f21dd011ace6f531613de0627dc8 SHA1 5ff25d8b14a80eec00d967682b91aed9a50d3a60 SHA256 f02c5ba738305637b33c4908b7444c6867583931591ab30b9085dc59eb338a66
 MISC metadata.xml 232 RMD160 972cf27496588cc64440e1876edcf977e2a647b6 SHA1 580ac1a9611856a5220bf94de74f5d4a7e86c7b9 SHA256 8c283461f2fc3fa5cea764397c4d1238ed1423aab74f0a05760b9b20ad2680fc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk6B+mQACgkQV3J2n04EauwiEACfVslZYhoPjgPsv32yKKmF77Zy
-IbcAnR54QlQCIzELKWmdebTo/3wuD3vM
-=n+44
+iEYEARECAAYFAk6SzCEACgkQVWmRsqeSphMwkwCfcOWwEo5ehwo9RDxygkvm0RK5
+aIUAn0YL+yftFPREpIYBAI+17+qa6krH
+=dzDR
 -----END PGP SIGNATURE-----
