@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Warn/Test-Warn-0.230.0.ebuild,v 1.1 2011/02/26 07:12:10 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Warn/Test-Warn-0.230.0.ebuild,v 1.3 2011/10/10 10:41:55 jer Exp $
 
 EAPI=3
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Perl extension to test methods for warnings"
 
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~s390 ~sh ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="test"
 
 RDEPEND=">=dev-perl/Sub-Uplevel-0.12
