@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST Tree-DAG_Node-1.05.tar.gz 32770 RMD160 f57ed83f6f50112d5f94e8c6de0edde34c10412d SHA1 e66637eda5a791528047f9ad5c639e5d39db1855 SHA256 a0321596c962e3ca568e2f1ede430c40f5d42f30493469f5a72a34814b45200b
 DIST Tree-DAG_Node-1.06.tar.gz 32843 RMD160 b3011e10cbfe8b1dbc7d3ee191e6dbe692b18d46 SHA1 8f412087b33942df06f20ca7c2e8ea0bd2354742 SHA256 502570774dd3bf11345fb028ca4cdd79f04db12ee68a826f0c44e24da0e3db2a
-EBUILD Tree-DAG_Node-1.05.ebuild 528 RMD160 0ee2c0f5cb175ed67be2ac95e4ce4be8c705ccaa SHA1 0ecbacfab4880f0d3a396eae5d28901ff2f44eef SHA256 91a56061588c4134665d54bb7b01b300fafc640dd4f06c621f1c54db3d44156c
-EBUILD Tree-DAG_Node-1.60.0.ebuild 481 RMD160 c5325ea1795c5d18811b8bae66dc85049cde7e4d SHA1 c3b581efbb818e9a7e23adefff537172de2bd7c3 SHA256 792d591bc1c349a59d6a9a95d42dfd2023b0c9db544162ed0b1843c2c468b07d
-MISC ChangeLog 1850 RMD160 63569c123f1559ec3b93c6d19010fdd66f7b379f SHA1 2503bc1f950e44ba7b42f64699275875f4e2b81c SHA256 9dbaf7ebf05ae2e82586680d6a6c812ac3cf6ad6a8612240370f2b9162401a01
+EBUILD Tree-DAG_Node-1.05.ebuild 550 RMD160 17de242f6301d9bdaa9c3ec032c01a86d661106e SHA1 5a2bb4948c1f07b15cc9d42678aee5bd38d6fd72 SHA256 634f5f058d52f670bc89513f1cc6b78ce923c89d32d668b57b4df4566659cb8c
+EBUILD Tree-DAG_Node-1.60.0.ebuild 508 RMD160 25531aa07ed308282d17a0bee0201692435b2746 SHA1 1bcfe7dc82744bb1bdea7079cbff519ca30f9a1f SHA256 e5e16253d5ea820e388513fe5ca18ff989393ba4d2508c4b22cc34a1f4856dcf
+MISC ChangeLog 2104 RMD160 399a98da6067de64e0364063f7a7b737dcd555c9 SHA1 79437284383b2911a6cf842c4a51e68384e042d6 SHA256 1a13732e2d8b1407ad867e943b5cae41f7e30b377ecbea9eb958e376a1b2ec84
 MISC metadata.xml 239 RMD160 22f46ad7be7e83df73d4e078c177abc7629076ec SHA1 a98212691aa57f2abf202b51a9721f27540782f4 SHA256 ab24c78dc2caef25c2c15785e0f63c12ff6259174f6d76afe731544784461d23
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYD8ACgkQV3J2n04Eaux4egCeMR0+9Orx0oo3cXDBa3KsOUv1
-UjQAoLajLCiElpeByFamPosSwRb8+4J+
-=Taxp
+iEYEARECAAYFAk6Sy9QACgkQVWmRsqeSphNwMQCdFZHHio+Ne2VHpjmrKrAZxyv0
+sLAAn3JKrToTQhgqiE7ki8RS17qImBqf
+=zVTm
 -----END PGP SIGNATURE-----
