@@ -1,17 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX ming-0.4.3-libpng-1.5.patch 1344 RMD160 0b846c76dce0d921cf89947297be9a121a9ecc9a SHA1 3e08aa8dba069cac7654d95cc84b225a9a02384c SHA256 8c53e49a3fe3ce4ae0e9235985b6b17764677db30ade29b3b2b258fe71c3d098
 DIST ming-0.4.3.tar.bz2 14098671 RMD160 38a495250c7f4ff3335ebd08df2984719a2f046b SHA1 e51a1c9de7efcd6b20f727a824cfbf323b6f5e6f SHA256 61480ef0bd911639ac0538bf59d4d5052a1380192d145e922720c33c40693bf0
-EBUILD ming-0.4.3-r1.ebuild 2330 RMD160 b17057a5e83d49d89f5cdd1ee5a417c96ca8dd37 SHA1 055000a7fdbac1eea534a27cd8fab9a62dc02c66 SHA256 dc419df95530a768e56dd1e7458b49607d05e770df88acba49ff2f6de2fba1f8
-MISC ChangeLog 10614 RMD160 722828a0eaa25ff6f8010d7dec6151570c890cdc SHA1 2db5db91b4c4008c5b1c3815f129e6abc4f86a18 SHA256 ee5731ad68c48c93ce2e82374b0244127ea3fa259b0345e5c6e2c3bce7f157cf
+EBUILD ming-0.4.3-r1.ebuild 2429 RMD160 060bdcb4706aa1496709e7e8ef51ae886a36cbba SHA1 08157af2b41a405472f138f95904f4324e3baf70 SHA256 331454f3dc6383c62a37f3547014655a7a78f77ba2f9042d093ccd970beeda8f
+MISC ChangeLog 10747 RMD160 9ad05a6b73fe72f48f8a574f2a49785e8d48a131 SHA1 70133e5487cc9efeb2e863021ef1d3a6720a729f SHA256 da00cd807dc38689c67c3dd1ad88042b12c26b594f90c4ec66caf3b5b1709b31
 MISC metadata.xml 214 RMD160 ea476e10a778f79d9273adbbc2403db67d025e10 SHA1 7f156558998e184ab8ea7417fd4739048f012a09 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk59pegACgkQfXuS5UK5QB1r4QP8D55bxhKULyaSNpWqcuqDP2QQ
-2+vHylIM/kTwSs66UvcBVZvrb5BNJJ8UGSNM9sTft3X+zvAG5HktOrFaE/BFLmBK
-YwMhUSJL05S5CIF3Wi9gu2c26mN506iQkGYLmn5KoHU7dXpt6fcLFiY/57yQ/uDr
-EaRWoggqqd6L0uJ3k2A=
-=lPDd
+iQEcBAEBAgAGBQJOkaI3AAoJEEdUh39IaPFN1akH/RTcVWajImGoqYpQa5tH908M
+Vaz3UfvmxNE+eqwdBh7Nb7XuuNK2sEv23ZPEJtMugW0ETMUlmj0lELPfn1gvX8k6
+eLoSNB3y+AsPBBirNMhaNF5TvPL6y/Cdv/cKNjK76H1ea0pp6cLmIgYAN4ma+fG6
+W0B8l+Uw+Mvq5FC9RPstwiECUjYIMPP1LFZmYPHO393LdZKJFAAGaD+ijsXQUukp
+DbK04KdtBdC/pwzNeyrpjzaHRWoDm47M20n6+RouFVOoDPsYx80gB7+Y0WdJLQQs
+/TPUIsvpAErorpj/yKUEEOIzJ0PaqHnLRY5FWePd57OGPBkWbBxoYfzLxmZVIHY=
+=HXuj
 -----END PGP SIGNATURE-----
