@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Test-Warn
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Warn/ChangeLog,v 1.32 2011/07/29 12:43:47 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Warn/ChangeLog,v 1.34 2011/10/10 10:41:55 jer Exp $
+
+  10 Oct 2011; Jeroen Roovers <jer@gentoo.org> Test-Warn-0.230.0.ebuild:
+  Marked ~hppa (bug #384677).
+
+  09 Oct 2011; Raúl Porcel <armin76@gentoo.org> Test-Warn-0.21.ebuild,
+  Test-Warn-0.230.0.ebuild:
+  Add ~alpha/~arm/~ia64/~s390/~sh wrt #384677
 
   29 Jul 2011; Torsten Veller <tove@gentoo.org> -Test-Warn-0.22.ebuild:
   Cleanup
