@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Tree-DAG_Node
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tree-DAG_Node/ChangeLog,v 1.15 2011/09/04 11:22:36 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Tree-DAG_Node/ChangeLog,v 1.17 2011/10/10 10:41:18 jer Exp $
+
+  10 Oct 2011; Jeroen Roovers <jer@gentoo.org> Tree-DAG_Node-1.60.0.ebuild:
+  Marked ~hppa (bug #384677).
+
+  09 Oct 2011; Raúl Porcel <armin76@gentoo.org> Tree-DAG_Node-1.05.ebuild,
+  Tree-DAG_Node-1.60.0.ebuild:
+  Add ~alpha/~arm/~s390/~sh wrt #384677
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -Tree-DAG_Node-1.06.ebuild:
   Cleanup
